--- a/index.html
+++ b/index.html
@@ -7,7 +7,9 @@
   <title>Document</title>
 </head>
 <body>
-  <script src="index.js"></script>
+  <!-- <script src="index.js"></script> -->
+  <script src="bind.js"></script>
+
 
     <li></li>
 </body>
